# ml-pic-collision-operators

./: .gitignore  LICENSE  README.md  check_torch.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: tests.yml
configs/: ex_test.yaml  ex_train.yaml
examples/: K-nn-test.yaml  K-nn-train.yaml  K-tensor-test.yaml  K-tensor-train.yaml  do-all-ddp.sh  do-all.sh  do-single-example.sh  download_data.sh  nn-test-3D.yaml  nn-test-conditioned.yaml  nn-test-ddp.sh  nn-test.sh  nn-test.yaml  nn-train-3D.yaml  nn-train-conditioned.yaml  nn-train-ddp.sh  nn-train.sh  nn-train.yaml  tensor-test-3D.yaml  tensor-test-ddp.sh  tensor-test-time_dependent.yaml  tensor-test.sh  tensor-test.yaml  tensor-train-3D.yaml  tensor-train-ddp.sh  tensor-train-time_dependent.yaml  tensor-train.sh  tensor-train.yaml
examples/tests/: do-all.sh  nn-train-xs.yaml  tensor-train-xs.yaml
requirements/: rigel.txt
src/: installs.txt  logging.py  test.py  train.py  utils.py
src/dataloaders/: __init__.py  base.py
src/datasets/: __init__.py  base.py  base_wconditioners.py  on_device.py  temporal_unrolled.py  temporal_unrolled_wconditioners.py
src/ml_pic_collision_operators/: logging.py  logging_utils.py  main.py  test.py  train.py  utils.py
src/models/: __init__.py  fokker_planck_2D.py  fokker_planck_2DNN.py  fokker_planck_2DNN_base.py  fokker_planck_2D_AT_BT.py  fokker_planck_2D_Aline_Bline.py  fokker_planck_2D_Aquad_Bquad.py  fokker_planck_2D_Arb.py  fokker_planck_2D_NN.py  (+5 more)
tests/: test_config.py  test_dataloader.py  test_datasets.py  test_logging.py  test_train.py  test_utils.py
(+497 files in other folders)
